chore(): Spring boot 4.1.0 migration (#358)